crates/dollet-core/src/output/snapshots/dollet_core__output__xc__tests__epg_listings_json_for_the_short_epg.snap
---
source: crates/dollet-core/src/output/xc.rs
expression: "epg_listings(&programs, &ctx)"
---
{
  "epg_listings": [
    {
      "id": "1",
      "epg_id": "5",
      "title": "VXBjb21pbmc=",
      "lang": "",
      "start": "2026-09-11 16:00:00",
      "end": "2026-09-11 16:30:00",
      "description": "VXBjb21pbmcgZGVzY3JpcHRpb24=",
      "channel_id": "101",
      "start_timestamp": "1789142400",
      "stop_timestamp": "1789144200",
      "stream_id": "1",
      "has_archive": 0
    }
  ]
}
