crates/dollet-core/src/output/snapshots/dollet_core__output__xc__tests__live_categories_json.snap
---
source: crates/dollet-core/src/output/xc.rs
expression: live_categories(&groups)
---
[
  {
    "category_id": "1",
    "category_name": "News",
    "parent_id": 0
  },
  {
    "category_id": "2",
    "category_name": "Sports & More",
    "parent_id": 0
  }
]
