crates/dollet-core/src/output/snapshots/dollet_core__output__xc__tests__live_streams_json.snap
---
source: crates/dollet-core/src/output/xc.rs
expression: "live_streams(&channels, &live_options())"
---
[
  {
    "num": 101,
    "name": "Channel A",
    "stream_type": "live",
    "stream_id": 1,
    "stream_icon": "http://ipx.test/logo/1.png",
    "epg_channel_id": "101",
    "added": "0",
    "is_adult": 1,
    "category_id": "1",
    "category_ids": [
      1
    ],
    "custom_sid": "",
    "tv_archive": 0,
    "direct_source": "",
    "tv_archive_duration": 0
  },
  {
    "num": 102,
    "name": "Channel B",
    "stream_type": "live",
    "stream_id": 2,
    "stream_icon": "http://ipx.test/logo/2.png",
    "epg_channel_id": "102",
    "added": "0",
    "is_adult": 0,
    "category_id": "1",
    "category_ids": [
      1
    ],
    "custom_sid": "",
    "tv_archive": 1,
    "direct_source": "",
    "tv_archive_duration": 7
  },
  {
    "num": 1,
    "name": "Channel C",
    "stream_type": "live",
    "stream_id": 3,
    "stream_icon": null,
    "epg_channel_id": "1",
    "added": "0",
    "is_adult": 0,
    "category_id": "99",
    "category_ids": [
      99
    ],
    "custom_sid": "",
    "tv_archive": 0,
    "direct_source": "",
    "tv_archive_duration": 0
  }
]
